tests/NormalTests/paczka1/fuzzy1/15245227.err
Error in line 6: S7Qof S324 78,6
Error in line 14: Okz6MWaw S365 39,2
Error in line 11: Dy93rB A112 43,2
Error in line 10: S7Qof A112 90,7
Error in line 27: Dy93rB S892 421,8
Error in line 37: Dy93rB S324 528,8
Error in line 22: S7Qof S365 83,0
